--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "connect-flash": "^0.1.1",
     "ejs": "^2.7.1",
     "express": "^4.17.1",
+    "express-sanitizer": "^1.0.5",
     "express-session": "^1.17.0",
     "locus": "^2.0.4",
     "method-override": "^3.0.0",
